fix form spacing

--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -6,6 +6,14 @@
   margin-bottom: 1vh;
 }
 
+.filter-by {
+  margin-right: 0.5vw;
+}
+
+.select-menu {
+  margin-right: 0.5vw;
+}
+
 .search-icon {
   margin: 0;
   cursor: pointer;
